--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,10 @@
 ---
 type: page
-title: About
-date: 2021-03-19
+title: 关于
+date: 2025-04-19
 ---
 
-# Your Name
+# AnastasiaJiang
 
 Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
 
@@ -15,11 +15,11 @@ This portfolio is built with **Next.js** and a library called [Nextra](https://n
 ---
 
 <div>
-  Twitter [@yourname](https://twitter.com/yourname)
+  {/* Twitter [@anastasiajs](https://twitter.com/anastasiajs) */}
+  {/* <br /> */}
+  GitHub [@anastasiajs](https://github.com/anastasiajs)
   <br />
-  GitHub [@yourname](https://github.com/yourname)
+  Instagram [@anastasiajs](https://instagram.com/anastasiajs)
   <br />
-  Instagram [@yourname](https://instagram.com/yourname)
-  <br />
-  Email your@name.com
+  Email 245915765@qq.com
 </div>
